kubernetes/redis-master-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-master-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-master
  template:
    metadata:
      labels:
        app: redis-master
    spec:
      containers:
        - name: redis-master
          image: redis:latest
          ports:
            - containerPort: 6379
