kubernetes/redis-slave-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-slave-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
        - name: redis-slave
          image: redis:latest
          ports:
            - containerPort: 6379
