kubernetes/database-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: postgresql-service
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
