kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
