kubernetes/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-service
  namespace: dev
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
