kubernetes/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave-service
  namespace: dev
spec:
  selector:
    app: redis-slave
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
