kubernetes/webserver-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: spring-webserver-service
spec:
  selector:
    app: spring-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
