kubernetes/k3d-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3d-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-webserver-service
                port:
                  number: 80
